Includes 3rd April problem and Modified the package